--- a/html/Inspection/Insp_ENGINE AND MOUNT.html
+++ b/html/Inspection/Insp_ENGINE AND MOUNT.html
@@ -95,8 +95,8 @@
 
   <tr>
     <td class="cellInspectionNumber">EM15</td>
-    <td class="cellInspectionInterval">(---)</td>
-    <td class="cellInspectionText">Perform Hot-Section Inspection at Pratt & Whitney Canada recommended interval.</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Inspect SCEET compressor discharge and starter/generator cooling tubes for delamination - as equipped: PT6-powered models with external engine compressor discharge system.( -65 series and -67 series engines have internal compressor discharge and are not applicable). All Air Tractor turbine models with optional 51207 Starter Generator Cooling Installation.</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">EM16</td>
