--- a/html/Inspection/Insp_PROPELLER.html
+++ b/html/Inspection/Insp_PROPELLER.html
@@ -32,27 +32,33 @@
         </td>
     </tr>
     <tr>
+        <td class="cellInspectionNumber">P6</td>
+        <td class="cellInspectionInterval">(1000)</td>
+        <td class="cellInspectionText">Dynamic-balance propeller.
+        </td>
+    </tr>
+    <tr>
         <td class="cellInspectionNumber">P7</td>
-        <td class="cellInspectionInterval">(120)</td>
-        <td class="cellInspectionText">Check the torque of the propeller mounting bolts per Hartzell Alert Service Bulletin A203.  (Ref SL126C)
+        <td class="cellInspectionInterval">(---)</td>
+        <td class="cellInspectionText">Refer to propeller maintenance manual for other inspections.
         </td>
     </tr>
     <tr>
         <td class="cellInspectionNumber">P8</td>
-        <td class="cellInspectionInterval">(1000)</td>
-        <td class="cellInspectionText">Dynamic-balance propeller.
+        <td class="cellInspectionInterval">(12 Months)</td>
+        <td class="cellInspectionText">Verify that the aircraft's Airplane Flight Manual (AFM) “Before Takeoff” checklist contains the following language:
+            <ul>
+                <li>Propeller Control</li>
+                <li>Cycle three times (first start of the day)</li>
+                <li>Cycle Once (Each subsequent start of the day)</li>
+</ul>
+
         </td>
     </tr>
     <tr>
         <td class="cellInspectionNumber">P9</td>
         <td class="cellInspectionInterval">(12 Months)</td>
         <td class="cellInspectionText">Inspect and clean beta valve plunger assembly. (if equipped with Woodward 8210 propeller governor). (Ref. SL172) 
-        </td>
-    </tr>
-    <tr>
-        <td class="cellInspectionNumber">P10</td>
-        <td class="cellInspectionInterval">(---)</td>
-        <td class="cellInspectionText">Refer to propeller maintenance manual for other inspections.
         </td>
     </tr>
 </table>
