--- a/html/Maintenance/Approved Oil and Refrigerants.html
+++ b/html/Maintenance/Approved Oil and Refrigerants.html
@@ -21,3 +21,7 @@
         </tr>
     </table>
 </div>
+
+<p>Compressor clutches and compressor-clutch magnets are no longer available from the manufacturer for the original R-12 airconditioner system. Since there are still many of these units in service, Air Tractor has an alternate clutch available. The original R-12 clutch is easily identified by the double "V" belt pulley grooves. 
+</p>
+<p>If your compressor clutch requires servicing, we suggest that you convert the system to R-134a refrigerant according to Service Letter #159. However if you wish to continue to use R-12 refrigerant, the clutch may be replaced with the P/N 25-8502-24 poly-V belt clutch. To install the P/N 25-8502-24 clutch on your aircraft, refer to Service Letter #181.</p>
