--- a/html/Maintenance/MVP50T Engine Instrument Calibration.html
+++ b/html/Maintenance/MVP50T Engine Instrument Calibration.html
@@ -1,1 +1,6 @@
-<p style="color:red">CONTENT NOT CREATED</p>
+<p>Aircraft that have the MVP-50T Primary Engine Monitor STC installed by Air Tractor (SA02135SE) may have a G-force sensor, labeled GS-3, not reading accurately. As of September 2016, a G-force calibration inspection requirement was been added to Air Tractor production. 
+</p>
+<p>The inaccuracy is evident because the G-force sensor’s reading is not either 0.9 or 1.0 when the airplane is stationary. To correct the inaccuracy, it will be necessary to perform a G-force sensor calibration procedure, to adjust the sensor’s Gain and Offset. If sensor calibration is required, refer to Service Letter #354.</p>
+<p>Air Tractor aircraft have received approval from the FAA to disable the MVP-50T’s master caution and master warning lights from being triggered by propeller RPM (NP) for Models which have one or more yellow ranges on the NP display. Those yellow NP ranges are intended to remind the pilot that stabilized ground operations are restricted within those ranges, according to AFM guidance. However, the yellow NP ranges are not restricted during any in-flight condition, and it is common for some Air Tractor models to operate in flight within a yellow NP range for extended periods of time. Therefore, disabling the MVP-50T master caution and master warning lights for NP will eliminate a nuisance caution light from coming on in flight, or from coming on when advancing the throttle during takeoff. 
+</p>
+<p>Refer to Service Letter #349 for more information.</p>
