--- a/index.html
+++ b/index.html
@@ -288,22 +288,162 @@
 
 
 
-    <div class="sideBarRight" style="transform: rotate(-90deg);">
-        <!--
-        <p style="border: 1px solid black; width: 20em;">Description</p>
-        <p style="border: 1px solid black; width: 20em;">Maintenance</p>-->
-        <table style="width: 9.0in; font-weight: bold; margin-left: 40px;">
-            <tr>
-                <td style="border:1px solid black; text-align: center;"><a href="#Sec_6">AIRWORTHINESS LIMITATIONS</a></td>
-                <td style="border:1px solid black; text-align: center;"><a href="#Sec_5">REPAIRS</a></td>
-                <td style="border:1px solid black; text-align: center;"><a href="#Sec_4">LUBRICATION</a></td>
-                <td style="border:1px solid black; text-align: center;"><a href="#Sec_3">INSPECTION</a></td>
-                <td style="border:1px solid black; text-align: center;"><a href="#Sec_2">MAINTENANCE</a></td>
-                <td style="border:1px solid black; text-align: center;"><a href="#Sec_1">DESCRIPTION</a></td>
+    <div class="sideBarRight_Description" style="transform: rotate(-90deg);">
+        <table cellspacing="0" style="width: 9.0in; font-weight: bold; margin-left: 40px;">
+            <tr style="height: 40px;">
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_6">AIRWORTHINESS LIMITATIONS</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_5">REPAIRS</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_4">LUBRICATION</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_3">INSPECTION</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_2">MAINTENANCE</a></td>
+                <td style="background-color: dimgray; text-align: center;"><a href="#Sec_1" style="color: white;">DESCRIPTION</a></td>
+            </tr>
+        </table>
+    </div>
+    <div class="sideBarLeft_Description" style="transform: rotate(-90deg);">
+        <table cellspacing="0" style="width: 9.0in; font-weight: bold; margin-left: 40px;">
+            <tr style="height: 40px;">
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_6">AIRWORTHINESS LIMITATIONS</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_5">REPAIRS</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_4">LUBRICATION</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_3">INSPECTION</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_2">MAINTENANCE</a></td>
+                <td style="background-color: dimgray; text-align: center;"><a href="#Sec_1" style="color: white;">DESCRIPTION</a></td>
             </tr>
         </table>
     </div>
 
+
+    <div class="sideBarRight_Maintenance" style="transform: rotate(-90deg);">
+        <table cellspacing="0" style="width: 9.0in; font-weight: bold; margin-left: 40px;">
+            <tr style="height: 40px;">
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_6">AIRWORTHINESS LIMITATIONS</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_5">REPAIRS</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_4">LUBRICATION</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_3">INSPECTION</a></td>
+                <td style="background-color: dimgray; text-align: center;"><a style="color: white;" href="#Sec_2">MAINTENANCE</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a href="#Sec_1" style="color: black;">DESCRIPTION</a></td>
+            </tr>
+        </table>
+    </div>
+    <div class="sideBarLeft_Maintenance" style="transform: rotate(-90deg);">
+        <table cellspacing="0" style="width: 9.0in; font-weight: bold; margin-left: 40px;">
+            <tr style="height: 40px;">
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_6">AIRWORTHINESS LIMITATIONS</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_5">REPAIRS</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_4">LUBRICATION</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_3">INSPECTION</a></td>
+                <td style="background-color: dimgray; text-align: center;"><a style="color: white;" href="#Sec_2">MAINTENANCE</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a href="#Sec_1" style="color: black;">DESCRIPTION</a></td>
+            </tr>
+        </table>
+    </div>
+
+    <div class="sideBarRight_Inspection" style="transform: rotate(-90deg);">
+        <table cellspacing="0" style="width: 9.0in; font-weight: bold; margin-left: 40px;">
+            <tr style="height: 40px;">
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_6">AIRWORTHINESS LIMITATIONS</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_5">REPAIRS</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_4">LUBRICATION</a></td>
+                <td style="background-color: dimgray; text-align: center;"><a style="color: white;" href="#Sec_3">INSPECTION</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_2">MAINTENANCE</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a href="#Sec_1" style="color: black;">DESCRIPTION</a></td>
+            </tr>
+        </table>
+    </div>
+    <div class="sideBarLeft_Inspection" style="transform: rotate(-90deg);">
+        <table cellspacing="0" style="width: 9.0in; font-weight: bold; margin-left: 40px;">
+            <tr style="height: 40px;">
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_6">AIRWORTHINESS LIMITATIONS</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_5">REPAIRS</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_4">LUBRICATION</a></td>
+                <td style="background-color: dimgray; text-align: center;"><a style="color: white;" href="#Sec_3">INSPECTION</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_2">MAINTENANCE</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a href="#Sec_1" style="color: black;">DESCRIPTION</a></td>
+            </tr>
+        </table>
+    </div>
+
+
+    <div class="sideBarRight_Lubrication" style="transform: rotate(-90deg);">
+        <table cellspacing="0" style="width: 9.0in; font-weight: bold; margin-left: 40px;">
+            <tr style="height: 40px;">
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_6">AIRWORTHINESS LIMITATIONS</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_5">REPAIRS</a></td>
+                <td style="background-color: dimgray; text-align: center;"><a style="color: white;" href="#Sec_4">LUBRICATION</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_3">INSPECTION</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_2">MAINTENANCE</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a href="#Sec_1" style="color: black;">DESCRIPTION</a></td>
+            </tr>
+        </table>
+    </div>
+    <div class="sideBarLeft_Lubrication" style="transform: rotate(-90deg);">
+        <table cellspacing="0" style="width: 9.0in; font-weight: bold; margin-left: 40px;">
+            <tr style="height: 40px;">
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_6">AIRWORTHINESS LIMITATIONS</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_5">REPAIRS</a></td>
+                <td style="background-color: dimgray; text-align: center;"><a style="color: white;" href="#Sec_4">LUBRICATION</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_3">INSPECTION</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_2">MAINTENANCE</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a href="#Sec_1" style="color: black;">DESCRIPTION</a></td>
+            </tr>
+        </table>
+    </div>
+
+
+
+    <div class="sideBarRight_Repairs" style="transform: rotate(-90deg);">
+        <table cellspacing="0" style="width: 9.0in; font-weight: bold; margin-left: 40px;">
+            <tr style="height: 40px;">
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_6">AIRWORTHINESS LIMITATIONS</a></td>
+                <td style="background-color: dimgray; text-align: center;"><a style="color: white;" href="#Sec_5">REPAIRS</a></td>
+                <td style="background-color: lightgrey; text-align: center;"><a style="color: black;" href="#Sec_4">LUBRICATION</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_3">INSPECTION</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_2">MAINTENANCE</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a href="#Sec_1" style="color: black;">DESCRIPTION</a></td>
+            </tr>
+        </table>
+    </div>
+    <div class="sideBarLeft_Repairs" style="transform: rotate(-90deg);">
+        <table cellspacing="0" style="width: 9.0in; font-weight: bold; margin-left: 40px;">
+            <tr style="height: 40px;">
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_6">AIRWORTHINESS LIMITATIONS</a></td>
+                <td style="background-color: dimgray; text-align: center;"><a style="color: white;" href="#Sec_5">REPAIRS</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_4">LUBRICATION</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_3">INSPECTION</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_2">MAINTENANCE</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a href="#Sec_1" style="color: black;">DESCRIPTION</a></td>
+            </tr>
+        </table>
+    </div>
+
+
+        <div class="sideBarRight_Limitations" style="transform: rotate(-90deg);">
+        <table cellspacing="0" style="width: 9.0in; font-weight: bold; margin-left: 40px;">
+            <tr style="height: 40px;">
+                <td style="background-color: dimgray; text-align: center;"><a style="color: white;" href="#Sec_6">AIRWORTHINESS LIMITATIONS</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_5">REPAIRS</a></td>
+                <td style="background-color: lightgrey; text-align: center;"><a style="color: black;" href="#Sec_4">LUBRICATION</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_3">INSPECTION</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_2">MAINTENANCE</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a href="#Sec_1" style="color: black;">DESCRIPTION</a></td>
+            </tr>
+        </table>
+    </div>
+    <div class="sideBarLeft_Limitations" style="transform: rotate(-90deg);">
+        <table cellspacing="0" style="width: 9.0in; font-weight: bold; margin-left: 40px;">
+            <tr style="height: 40px;">
+                <td style="background-color: dimgray; text-align: center;"><a style="color: white;" href="#Sec_6">AIRWORTHINESS LIMITATIONS</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_5">REPAIRS</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_4">LUBRICATION</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_3">INSPECTION</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a style="color: black;" href="#Sec_2">MAINTENANCE</a></td>
+                <td style="background-color: lightgray; text-align: center;"><a href="#Sec_1" style="color: black;">DESCRIPTION</a></td>
+            </tr>
+        </table>
+    </div>
+
+    
 
     <script type="module" src="DocDef.mjs"></script>
     <script type="module" src="RenderDoc.mjs"></script>
