--- a/html/Maintenance/Aileron - Rudder Interconnect System Rigging.html
+++ b/html/Maintenance/Aileron - Rudder Interconnect System Rigging.html
@@ -71,3 +71,7 @@
 <p>If you operate an aircraft in the serial number -0001 through -0020 range, there has been a previous incident where one balance cable in the aileron control system became loose. The cable rode over the rim of a pulley and caused a drag force in the control stick. The aircraft remained controllable and was returned to the landing strip without further incident. A change in the design was made to prevent this from happening on serial number -0021 and subsequent.</p>
 
 <p>The aileron rudder interconnect system has been changed to incorporate a spring in each cable where it attaches to the control stick torque horn. This spring helps keep the interconnect cable tight. Consult Service Letter #150 if you need to update your aircraft with this improvement.</p>
+
+<p>Air Tractor has received a report of an in-flight jamming of a rudder pedal. The pilot was able to maintain control and, after landing, a cable pulley in the rudder system was found to be broken. Due to the numerous unsecured items in the baggage compartment, it is believed that one or more items fouled the cables causing the cables to jam resulting in a subsequent failure of the pulley. 
+</p>
+<p>Shield installations have been developed for serial numbers -0001 through -0319 to prevent this from happening. To prevent possible baggage interference with the flight controls, we encourage the installation of these shields per the directions located in Service Letter #274.</p>
