--- a/html/Maintenance/COCKPIT CONTROLS.html
+++ b/html/Maintenance/COCKPIT CONTROLS.html
@@ -9,3 +9,5 @@
 <p>The forward end of the torque tube has a p/n 70149-2 boot and a 70144-1 boot ring installed, with 9008-1 screws attaching the boot ring to the floor. On the aft cockpit wall, a p/n 70543-1 boot and 70542-1 ring seal the forward elevator push-rod entrance. The hopper handle has a p/n 80168-1 boot with a p/n 80168-1 boot with a p/n 70140-1 boot ring, and the spray lever push-rod has a p/n 80131-1 boot with p/n 70154-1 boot ring. The trim push-rod has a p/n 70817-1 boot and a p/n 70818-1 boot ring.</p>
 
 <p>A p/n 70478-1 control lock assembly is attached to two AN42B-4A eyebolts that are part of the instrument panel attachment. An Ajax No. 38 spring keeps the control lock pulled up out of the way. </p>
+
+<p>If your aircraft does not already have an overturn skid plate installed, it is highly recommended to install one using the information located in Service Letter #97.</p>
