--- a/html/Maintenance/Engine Driven Low Pressure Fuel Pump.html
+++ b/html/Maintenance/Engine Driven Low Pressure Fuel Pump.html
@@ -1,1 +1,9 @@
-<p style="color: red;">CONTENT NOT CREATED</p>
+<p>The following applies to serial number 802A-0485 and prior with PT6A-67AG Build Specification (BS) 1103 installed:</p>
+
+<p>All PT6A engines installed on Air Tractor products utilize mounting studs and self-locking nuts to mount the engine driven low pressure fuel pump to the engine oil scavenge pump housing, with the exception of the PT6A-67AG BS1103.</p>
+ 
+<p>The PT6A-67AG BS1103 utilizes mount bolts and safety wire. The spot faced bolt hole pattern in the modified fuel pump housing allowed for clearance of the bolt head to pass the fuel pump body when mounting the fuel pump to the engine. The newly manufactured fuel pump housings with the bolt hole spacing which precisely match the engine bolt pattern will not allow for the bolt head to clear the fuel pump housing during installation. </p>
+
+<p>Pratt & Whitney has incorporated mounting studs and self-locking nuts into production engines beginning with serial number PCE-RD0268 introducing a new build specification (BS1314). </p>
+
+<p>If a customer elects to replace the engine driven fuel pump with a newly manufactured P/N: 51076 fuel pump, it will require the concurrent compliance of P&WC SB No. 14467 which replaces the current oil scavenge pump housing utilizing mount bolts and lock wire with one which utilizes mount studs and self-locking bolts, necessitating the introduction of a new build specification (BS1314).</p>
