--- a/html/Maintenance/Ferry Fuel System.html
+++ b/html/Maintenance/Ferry Fuel System.html
@@ -1,1 +1,3 @@
-<p style="color: red;">CONTENT NOT CREATED</p>
+<p>Service Letter #219 is to provide guidance in correcting fuel migration from one tank to another, which may result in the engine quitting in flight. In addition, it outlines the proper use of the ferry fuel system.
+</p>
+<p>This information should be reviewed by all Air Tractor operators and a copy of Service Letter #219, along with Service Letters #178 and 178A, should be kept with the Airplane Flight Manual for periodic review by pilots.</p>
