--- a/html/Maintenance/Support Hangers and Straps.html
+++ b/html/Maintenance/Support Hangers and Straps.html
@@ -1,1 +1,2 @@
-<p style="color:red">CONTENT NOT CREATED</p>
+<p>For aircraft with serial numbers up to -0263, Air Tractor received a report from an customer that the p/n 81069 Safety Strap had failed, resulting in some loss of the herbicide he was spraying. The safety strap is designed to keep high pump pressure from blowing plumbing connections apart. Air Tractor believes that a crack started where the 1/8"r inside curve is located and grew as a result of repeated high stress from possibly loose hose clamps at the hose connections.</p>
+<p>The aircraft can be retrofitted with thicker straps using the information located in Service Letter #265.</p>
