--- a/html/Inspection/Insp_ENGINE AND MOUNT.html
+++ b/html/Inspection/Insp_ENGINE AND MOUNT.html
@@ -92,12 +92,6 @@
        <xref fileTarget="html/Maintenance/MVP50T Engine Instrument Calibration.html" prependLabel="Section"></xref>
       .</td>
   </tr>
-    <tr>
-    <td class="cellInspectionNumber">EM14</td>    <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">
-      Check the swivel seals/o-rings on propeller, power, fuel condition/shutoff, FCU override, engine alternate air, cockpit heat and auxiliary fuel cables for cracking or deterioration.</td>
-  </tr>
-
   <tr>
     <td class="cellInspectionNumber">EM15</td>
     <td class="cellInspectionInterval">(12 Months)</td>
@@ -106,7 +100,7 @@
   <tr>
     <td class="cellInspectionNumber">EM16</td>
     <td class="cellInspectionInterval">(---)</td>
-    <td class="cellInspectionText">Check the torque of the isolator engine bolts to a value of 275-300 in-lbs. If any torque values are outside of the acceptable range, refer to Service Letter #402</td>
+    <td class="cellInspectionText">Check the torque of the isolator engine bolts to 275-300 in-lbs. If any torque values are outside of the acceptable range, refer to Service Letter #402</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">EM17</td>
