Corrected spelling mistake

--- a/html/Maintenance/Tie Down Instructions.html
+++ b/html/Maintenance/Tie Down Instructions.html
@@ -4,7 +4,7 @@
 
 <div class="boxCautionMedium">
     <p class="boxCautionMediumHeader">CAUTION</p>
-    <p class="boxCautionMediumText">Do not set the parking brake when the brakes are overheated or during cold weather when accumulated moisture may freeze the brakes.  The main wheels should always be chocked when parked, but this is especially important if the parking brake is not set.</p>
+    <p class="boxCautionMediumText">Do not set the parking brake when the brakes are overheated or during cold weather as accumulated moisture may freeze the brakes.  The main wheels should always be chocked when parked, but this is especially important if the parking brake is not set.</p>
 </div>
 
 <p>Install the control stick lock and rudder lock and set all trim tabs to neutral position.  If available, install a pitot tube cover, engine inlet cover, engine exhaust covers (when cool), and install the propeller tether. </p>
