--- a/html/Description/COCKPIT.html
+++ b/html/Description/COCKPIT.html
@@ -1,10 +1,10 @@
 <p>The AT-802 or AT-802A has exceptional visibility on the ground as well as in the air. The windshield is three-piece, the two corner pieces being Plexiglas while the flat center piece is automotive safety-plate glass. Cockpit entry is made through either of two large canopy doors. A wire deflector is incorporated into the windshield support structure. The cockpit layout and details are shown below in Figures 5, 6, and 7.</p>
 <figure>
-    <img class="imageCentered_6x6" src="img/img_Fig_5.png" style="transform:rotate(90deg);">
-    <figcaption class="centerText">Cockpit- Forward and Panel TEST</figcaption>
+    <img class="imageCentered_6x6" src="img/img_Fig_5.png">
+    <figcaption class="centerText">Cockpit- Forward and Panel</figcaption>
 </figure>
 <figure>
-    <img class="imageCentered_6x6" src="img/img_Fig_6.png" style="transform:rotate(90deg);">
+    <img class="imageCentered_6x6" src="img/img_Fig_6.png">
     <figcaption class="centerText">Cockpit- Left-Hand Console</figcaption>
 </figure>
 <figure>
