--- a/html/Description/Rudder Controls.html
+++ b/html/Description/Rudder Controls.html
@@ -1,2 +1,6 @@
 <p>The rudder controls consist of stainless-steel cables that are connected between the rudder pedals and the rudder-control horn. The rudder stops are located at the rudder horn.  There is a spring loaded interconnect system between the rudder and the aileron systems that eases turn coordination. This interconnect also allows banking the aircraft with rudder application alone. </p>
 <p>The layout of the rudder-control system is shown below in Figure 9. </p>
+<figure>
+    <img class="imageCentered_6x6" src="img/img_Fig_9.png">
+    <figcaption class="centerText">Layout- Rudder Control</figcaption>
+</figure>
