--- a/html/Description/Starter Generator System.html
+++ b/html/Description/Starter Generator System.html
@@ -3,8 +3,16 @@
 <p>The starter-generator system produces and controls all electrical power for the aircraft. It works with the system's
     batteries and generator-control unit (GCU) to power the electrical buses. All electrical sub-systems receive their
     power from buses that are fed by the starter-generator system.</p>
-<p>Figure 11 shows the schematic for the 250-Amp charging system. The 250-Amp system is a standard part of the AT-802
-    and AT-802A. Figure 11A shows the schematic for the 300-Amp charging system. This system is optional but is required
+<figure>
+    <img class="imageCentered_6x6" src="img/img_Fig_11.png">
+    <figcaption class="centerText"> Wiring Schematic- 250 Amp Starter-Generator System</figcaption>
+</figure>
+<figure>
+    <img class="imageCentered_6x6" src="img/img_Fig_11A.png">
+    <figcaption class="centerText"> Wiring Schematic- 300 Amp Starter Generator System</figcaption>
+</figure>
+<p>Figure 11 above shows the schematic for the 250-Amp charging system. The 250-Amp system is a standard part of the AT-802
+    and AT-802A. Figure 11A above shows the schematic for the 300-Amp charging system. This system is optional but is required
     when the computer-controlled fire gate is installed. The system consists of:</p>
 <ol type="1">
     <li>The Starter/Generator (S/G) - the armature is continuously engaged in the engine's accessory gear box. The S/G
