Updated Figure reference numbers

--- a/html/Description/COCKPIT.html
+++ b/html/Description/COCKPIT.html
@@ -1,4 +1,4 @@
-<p>The AT-802 or AT-802A has exceptional visibility on the ground as well as in the air. The windshield is three-piece, the two corner pieces being Plexiglas while the flat center piece is automotive safety-plate glass. Cockpit entry is made through either of two large canopy doors. A wire deflector is incorporated into the windshield support structure. The cockpit layout and details are shown below in Figures 5, 6, and 7.</p>
+<p>The AT-802 or AT-802A has exceptional visibility on the ground as well as in the air. The windshield is three-piece, the two corner pieces being Plexiglas while the flat center piece is automotive safety-plate glass. Cockpit entry is made through either of two large canopy doors. A wire deflector is incorporated into the windshield support structure. The cockpit layout and details are shown below in Figures 1-3, 1-4, and 1-5.</p>
 <figure>
     <img class="imageCentered_6x6" src="img/img_Fig_5.png">
     <figcaption class="centerText">Cockpit- Forward and Panel</figcaption>
