Added correct figures

--- a/html/Maintenance/Aileron - Rudder Interconnect System Rigging.html
+++ b/html/Maintenance/Aileron - Rudder Interconnect System Rigging.html
@@ -17,7 +17,7 @@
         this range, and re-tighten hardware.</li>
 
     <li>Check the position of each centering spring. Ensue that the Adel clamp anchoring each spring is located at a
-        position of 8-3/4 (+/- 1/16) inches from the center of the clamp. See figure 1. Adjust the position of the Adel
+        position of 8-3/4 (+/- 1/16) inches from the center of the clamp. See figure 2-13. Adjust the position of the Adel
         clamps if necessary. </li>
 
     <li>Ensure that the lower centering spring is connected to the inboard idler arm and the upper centering spring is
@@ -26,7 +26,7 @@
     <li>Ensure that the 70814-4 interconnect spring is connected to the top hole of the outboard idler arm. </li>
 
     <li>Ensure that the 70525 interconnect cable is connected to the inboard idler arm. The position of this cable
-        attachment varies with the serial number of the aircraft. See figure 1.
+        attachment varies with the serial number of the aircraft. See Figure 2-13.
 
         <p>For serial Numbers -0001 thru -0073, -0075, and -0076: the cable should attach to the top hole in the inboard
             idler arm (approx. 3/8 from the end).</p>
