--- a/html/Maintenance/Cockpit Lighting.html
+++ b/html/Maintenance/Cockpit Lighting.html
@@ -1,3 +1,6 @@
 <p>The wiring schematic for the cockpit lighting is shown in Figure 40. The intensity level of the cockpit lights, except for the dome and map lights, is controlled by the solid-state dimming circuit. </p>
-
+<figure>
+    <img class="imageCentered_6x4" src="img/img_Fig_40.png">
+    <figcaption class="centerText">Wiring Schematic- Lighting</figcaption>
+</figure>
 <p>When the panel light switch is turned ON, power is available to the dimming circuit. The panel-light intensity is controlled by the panel-light rheostat on the instrument panel. </p>
