added figure cross reference to section 1

--- a/html/Description/Engine Controls.html
+++ b/html/Description/Engine Controls.html
@@ -5,4 +5,4 @@
     <img class="imageCentered_6x4" src="img/img_Fig_13.png">
     <figcaption class="centerText">  Engine Controls</figcaption>
 </figure>
-<p>All engine controls utilize ACCO push-pull cable assemblies. These cable assemblies are p/n 66-3651-2021 and have very little friction and require no lubrication. See Figure 1-10 above for the layout of engine controls.</p>
+<p>All engine controls utilize ACCO push-pull cable assemblies. These cable assemblies are p/n 66-3651-2021 and have very little friction and require no lubrication. See <xref fileTarget="img_Fig_13.png" xrefType="link">Fig Cross Reference</xref> above for the layout of engine controls.</p>
