--- a/html/Description/Starter Generator System.html
+++ b/html/Description/Starter Generator System.html
@@ -11,8 +11,8 @@
     <img class="imageCentered_6x6" src="img/img_Fig_11A.png">
     <figcaption class="centerText"> Wiring Schematic- 300 Amp Starter Generator System</figcaption>
 </figure>
-<p>Figure 1-8 above shows the schematic for the 250-Amp charging system. The 250-Amp system is a standard part of the AT-802
-    and AT-802A. Figure 1-9 above shows the schematic for the 300-Amp charging system. This system is optional but is required
+<p><xref fileTarget="img_Fig_11.png" xrefType="link">Fig Cross Reference</xref> above shows the schematic for the 250-Amp charging system. The 250-Amp system is a standard part of the AT-802
+    and AT-802A. <xref fileTarget="img_Fig_11A.png" xrefType="link">Fig Cross Reference</xref> above shows the schematic for the 300-Amp charging system. This system is optional but is required
     when the computer-controlled fire gate is installed. The system consists of:</p>
 <ol type="1">
     <li>The Starter/Generator (S/G) - the armature is continuously engaged in the engine's accessory gear box. The S/G
