--- a/html/Description/Fuel System.html
+++ b/html/Description/Fuel System.html
@@ -5,7 +5,7 @@
 <p>The fuel lines continue from the airframe pump to the fuel heater body. Lines from that point on are furnished with the engine.</p>
 <p>There are five quick drains in the fuel system one in each wing tank, two in the header tank and one in the fuel valve.</p>
 <p>Each fuel tank has an overboard vent located near the wing tip. With both tanks completely full, it is possible during flight to vent a small amount of fuel overboard by skidding the aircraft or rolling sharply. A check valve located next to the outboard fuel-tank wall greatly reduces the amount of fuel vented overboard during maneuvers.</p>
-<p>Fuel type is called out in the Flight Manual.  Fuel System Icing Inhibitor (FSII) such as Prist should be added to the fuel at a rate to provide .06% to .15% of FSII by volume when operating below 40° F. See Figure 1-11 below for details of the fuel system.</p>
+<p>Fuel type is called out in the Flight Manual.  Fuel System Icing Inhibitor (FSII) such as Prist should be added to the fuel at a rate to provide .06% to .15% of FSII by volume when operating below 40° F. See <xref fileTarget="img_Fig_22.png" xrefType="link">Fig Cross Reference</xref> below for details of the fuel system.</p>
 <figure>
     <img class="imageCentered_6x6" src="img/img_Fig_22.png">
     <figcaption class="centerText">  Fuel System Layout</figcaption>
