--- a/index.html
+++ b/index.html
@@ -38,13 +38,16 @@
 
     <div class="descriptionHeaderLeft">
         <div style="display: inline-block; width: 30%; text-align: left;">
-            <p style="line-height: 1em; margin:0;">Number:
+            <p style="line-height: 1em; margin:0;">
+                <span style="display: inline-block; width: 5em; text-align: left;">Number:</span>
                 <span style="display: inline-block; width: 5em; text-align: right;">03-0121</span>
             </p>
-            <p style="line-height: 1em; margin:0;">Date:
+            <p style="line-height: 1em; margin:0;">
+                <span style="display: inline-block; width: 5em; text-align: left;">Date:</span>
                 <span style="display: inline-block; width: 5em; text-align: right;">12/12/24</span>
             </p>
-            <p style="line-height: 1em; margin:0;">Page:
+            <p style="line-height: 1em; margin:0;">
+                <span style="display: inline-block; width: 5em; text-align: left;">Page:</span>
                 <span class="pgNumDesc" style="display: inline-block; width: 5em; text-align: right;">1-</span>
             </p>
         </div>
@@ -82,13 +85,16 @@
     </div>
     <div class="maintenanceHeaderLeft">
         <div style="display: inline-block; width: 30%; text-align: left;">
-            <p style="line-height: 1em; margin:0;">Number:
+            <p style="line-height: 1em; margin:0;">
+                <span style="display: inline-block; width: 5em; text-align: left;">Number:</span>
                 <span style="display: inline-block; width: 5em; text-align: right;">03-0121</span>
             </p>
-            <p style="line-height: 1em; margin:0;">Date:
+            <p style="line-height: 1em; margin:0;">
+                <span style="display: inline-block; width: 5em; text-align: left;">Date:</span>
                 <span style="display: inline-block; width: 5em; text-align: right;">12/12/24</span>
             </p>
-            <p style="line-height: 1em; margin:0;">Page:
+            <p style="line-height: 1em; margin:0;">
+                <span style="display: inline-block; width: 5em; text-align: left;">Page:</span>
                 <span class="pgNumMaint" style="display: inline-block; width: 5em; text-align: right;">2-</span>
             </p>
         </div>
@@ -127,13 +133,16 @@
     </div>
     <div class="inspectionHeaderLeft">
         <div style="display: inline-block; width: 30%; text-align: left;">
-            <p style="line-height: 1em; margin:0;">Number:
+            <p style="line-height: 1em; margin:0;">
+                <span style="display: inline-block; width: 5em; text-align: left;">Number:</span>
                 <span style="display: inline-block; width: 5em; text-align: right;">03-0121</span>
             </p>
-            <p style="line-height: 1em; margin:0;">Date:
+            <p style="line-height: 1em; margin:0;">
+                <span style="display: inline-block; width: 5em; text-align: left;">Date:</span>
                 <span style="display: inline-block; width: 5em; text-align: right;">12/12/24</span>
             </p>
-            <p style="line-height: 1em; margin:0;">Page:
+            <p style="line-height: 1em; margin:0;">
+                <span style="display: inline-block; width: 5em; text-align: left;">Page:</span>
                 <span class="pgNumInsp" style="display: inline-block; width: 5em; text-align: right;">3-</span>
             </p>
         </div>
@@ -171,13 +180,16 @@
     </div>
     <div class="lubricationHeaderLeft">
         <div style="display: inline-block; width: 30%; text-align: left;">
-            <p style="line-height: 1em; margin:0;">Number:
+            <p style="line-height: 1em; margin:0;">
+                <span style="display: inline-block; width: 5em; text-align: left;">Number:</span>
                 <span style="display: inline-block; width: 5em; text-align: right;">03-0121</span>
             </p>
-            <p style="line-height: 1em; margin:0;">Date:
+            <p style="line-height: 1em; margin:0;">
+                <span style="display: inline-block; width: 5em; text-align: left;">Date:</span>
                 <span style="display: inline-block; width: 5em; text-align: right;">12/12/24</span>
             </p>
-            <p style="line-height: 1em; margin:0;">Page:
+            <p style="line-height: 1em; margin:0;">
+                <span style="display: inline-block; width: 5em; text-align: left;">Page:</span>
                 <span class="pgNumLube" style="display: inline-block; width: 5em; text-align: right;">4-</span>
             </p>
         </div>
@@ -216,13 +228,16 @@
     </div>
     <div class="repairsHeaderLeft">
         <div style="display: inline-block; width: 30%; text-align: left;">
-            <p style="line-height: 1em; margin:0;">Number:
+            <p style="line-height: 1em; margin:0;">
+                <span style="display: inline-block; width: 5em; text-align: left;">Number:</span>
                 <span style="display: inline-block; width: 5em; text-align: right;">03-0121</span>
             </p>
-            <p style="line-height: 1em; margin:0;">Date:
+            <p style="line-height: 1em; margin:0;">
+                <span style="display: inline-block; width: 5em; text-align: left;">Date:</span>
                 <span style="display: inline-block; width: 5em; text-align: right;">12/12/24</span>
             </p>
-            <p style="line-height: 1em; margin:0;">Page:
+            <p style="line-height: 1em; margin:0;">
+                <span style="display: inline-block; width: 5em; text-align: left;">Page:</span>
                 <span class="pgNumRepairs" style="display: inline-block; width: 5em; text-align: right;">5-</span>
             </p>
         </div>
@@ -261,13 +276,16 @@
     </div>
     <div class="limitationsHeaderLeft">
         <div style="display: inline-block; width: 30%; text-align: left;">
-            <p style="line-height: 1em; margin:0;">Number:
+            <p style="line-height: 1em; margin:0;">
+                <span style="display: inline-block; width: 5em; text-align: left;">Number:</span>
                 <span style="display: inline-block; width: 5em; text-align: right;">03-0121</span>
             </p>
-            <p style="line-height: 1em; margin:0;">Date:
+            <p style="line-height: 1em; margin:0;">
+                <span style="display: inline-block; width: 5em; text-align: left;">Date:</span>
                 <span style="display: inline-block; width: 5em; text-align: right;">12/12/24</span>
             </p>
-            <p style="line-height: 1em; margin:0;">Page:
+            <p style="line-height: 1em; margin:0;">
+                <span style="display: inline-block; width: 5em; text-align: left;">Page:</span>
                 <span class="pgNumLimitations" style="display: inline-block; width: 5em; text-align: right;">6-</span>
             </p>
         </div>
