--- a/html/Maintenance/Cautionary Information.html
+++ b/html/Maintenance/Cautionary Information.html
@@ -3,7 +3,7 @@
         <p>Before disconnecting any lines or removing the oil plug, always make sure refrigerant has been removed from
             the
             air conditioning system by recovering it with the appropriate recovery equipment.
-            When working on compressors, separate from the system, always be sure to relieve internal pressure first.
+            When working on compressors separate from the system, always be sure to relieve internal pressure first.
             Internal compressor pressure can be relieved by removing shipping caps / pads from both ports.
         </p>
     </li>
