--- a/html/Maintenance/Diagnosis of Compressor Failure.html
+++ b/html/Maintenance/Diagnosis of Compressor Failure.html
@@ -19,13 +19,13 @@
     <li>Clutch Inspection
         <ol type="a">
             <li>Voltage Check
-                <p>Confirm that the clutch is receiving at a minimum 23 V. If voltage
-                    is not being received at the clutch run a diagnostic on the vehicle electrical system. (Note:
+                <p>Confirm that the clutch is receiving a minimum of 23 V. If voltage
+                    is not being received at the clutch, run a diagnostic on the vehicle electrical system. (Note:
                     perform test with
                     power applied to coil to fully load the circuit)</p>
             </li>
             <li>Pulley or Rotor Spin Check
-                <p>With clutch disengage the pulley should spin freely with no wobbling or roughness/vibration</p>
+                <p>With clutch disengaged the pulley should spin freely with no wobbling or roughness/vibration</p>
             </li>
             <li>Air Gap Check
                 <p>Air gaps exceeding 0.051" (1.3 mm) can prevent engagement. This often is noticed after the clutch and
@@ -57,7 +57,7 @@
                 once 350 psig is achieved.</p>
         </div>
         <ol type="a">
-            <li>Disconnect electric cooling fan. The condenser can also be blocked with sheet of card board. The purpose is to
+            <li>Disconnect electric cooling fan. The condenser can also be blocked with a sheet of cardboard. The purpose is to
                 limit heat removal from the system and build compressor discharge pressure.</li>
             <li>Start engine and engage clutch.</li>
             <li>Compressors operating within specification should be capable of reaching 350 psig.</li>
@@ -79,7 +79,7 @@
                 </ul>
             </li>
             <li>Soap Bubble Detection
-                <p>Soap bubbles are a means to detect gross leaks. In general one very small bubble released per second is equal to 40
+                <p>Soap bubbles can be used to detect gross leaks. In general one very small bubble released per second is equal to 40
                     oz of refrigerant loss per year. Finding leaks smaller than 40 ounces per year requires an electronic detector.</p>
             </li>
             <li>Shop Type Electronic Detectors
@@ -91,14 +91,14 @@
             </li>
             <li>Leak Detection Dyes
                 <p>Leak detection dyes are to be used in accordance with the manufactures instructions.</p>
-                <p>Leak detection dyes work by staining the system oil. So when adding dye to a system which did not initially contain
-                    dye the system will need to operate for some time to allow all the oil to become stained and arrive at the leak.</p>
+                <p>Leak detection dyes work by staining the system oil. When adding dye to a system which did not initially contain
+                    dye, the system will need to operate for some time to allow all the oil to become stained and arrive at the leak.</p>
             </li>
         </ol>
     </li>
     <li>Noise
         <ol type="a">
-            <li>Unusual Noise Not due to Compressor
+            <li>Unusual Noise Not Due to Compressor
                 <p>Unusual noises may be caused by components other than the compressor</p>
                 <p>Compressor Mounting - Check for:</p>
                 <ul>
