Added reference to figure

--- a/html/Maintenance/Charging.html
+++ b/html/Maintenance/Charging.html
@@ -1,4 +1,4 @@
-<p>The charging system should include electronic scales and a charging station.</p>
+<p>The charging system should include electronic scales and a charging station as shown below in <xref fileTarget="img_AirConditionerChargingStation.png" xrefType="link">Fig Cross Reference</xref>.</p>
 <figure>
     <img class="imageCentered_3x2" src="img/img_AirConditionerChargingStation.png">
     <figcaption class="centerText">Air Conditioner Charging Station</figcaption>
