Added figure reference and cross reference

--- a/html/Maintenance/Oiling.html
+++ b/html/Maintenance/Oiling.html
@@ -42,7 +42,7 @@
 <ol type="1">
     <li>Remove the oil plug from the failed compressor and drain as much oil as possible into a suitable container.</li>
     <li>Drain oil from the suction and discharge ports into a suitable container while turning the shaft clockwise only
-        with a socket wrench on the armature retaining nut.
+        with a socket wrench on the armature retaining nut, as seen below in <xref fileTarget="img_AirCondionerCompressorDraining.png" xrefType="link">Fig Cross Reference</xref>.
         
         <figure>
             <img class="imageCentered_3x2" src="img/img_AirCondionerCompressorDraining.png">
@@ -51,7 +51,7 @@
     </li>
     <li>Measure and record the amount of oil drained from the compressor.</li>
     <li>Drain oil from the new compressor.</li>
-    <li>Add oil back into the new compressor in an amount equal to that drained from the old compressor.
+    <li>Add oil back into the new compressor in an amount equal to that drained from the old compressor, as shown below in <xref fileTarget="img_AirConditionerAddingOilToCompressor.png" xrefType="link">Fig Cross Reference</xref>.
         <figure>
             <img class="imageCentered_3x2" src="img/img_AirConditionerAddingOilToCompressor.png">
             <figcaption class="centerText">Adding Oil to Compressor</figcaption>
