Elevator typo correction and references added

--- a/html/Maintenance/Elevator Trim Tab Controls.html
+++ b/html/Maintenance/Elevator Trim Tab Controls.html
@@ -1,13 +1,13 @@
 <p>Details of the elevator trim tab cockpit controls are shown in Figure 8.  The elevator trim tab system uses the elevator tabs as both trim tabs and as elevator boost tabs. The boost tabs function to relieve a portion of the control load during maneuvers. </p>
 
-<p>Elevator trim is controlled by a handwheel on the left-hand wall of the cockpit. The handwheel is shaft-connected to a two-sheave drum that drives two taut and opposing cables. These are connected at their opposite end to a pulley shaft that positions a worm gear in a gear box that is located in the aft fuselage. The worm-gear box is shown below. </p>
+<p>Elevator trim is controlled by a handwheel on the left-hand wall of the cockpit. The handwheel is shaft-connected to a two-sheave drum that drives two taut and opposing cables. These are connected at their opposite end to a pulley shaft that positions a worm gear in a gear box that is located in the aft fuselage. The worm-gear box is shown below in <xref fileTarget="img_Fig_18.png" xrefType="link">Fig Cross Reference</xref>. </p>
 
 <figure>
     <img class="imageCentered_3x4" src="img/img_Fig_18.png">
     <figcaption class="centerText">Worm-Gear Box</figcaption>
 </figure>
 
-<p>The worm gear drives a sector gear with an exposed sector arm attached on the aft side of the gatebox. The sector arm is connected by a pushrod to a bellcrank that transmits the motion to an idler just forward of the aft edge of the horizontal stabilizer. One of these idlers is shown below.  </p>
+<p>The worm gear drives a sector gear with an exposed sector arm attached on the aft side of the gatebox. The sector arm is connected by a pushrod to a bellcrank that transmits the motion to an idler just forward of the aft edge of the horizontal stabilizer. One of these idlers is shown below in <xref fileTarget="img_Fig_70.png" xrefType="link">Fig Cross Reference</xref>.  </p>
 
 <figure>
     <img class="imageCentered_4x3" src="img/img_Fig_70.png">
