Hopper typo corrections and including cross references and figure references

--- a/html/Maintenance/Hopper Lid.html
+++ b/html/Maintenance/Hopper Lid.html
@@ -6,7 +6,7 @@
 
 <ol type="1">
     <li>Fabricate a gage from .010-thick 1"X6" stainless-steel sheet.</li>
-    <li>oosen all of the lid's hold-down clamps.</li>
+    <li>Loosen all of the lid's hold-down clamps.</li>
     <li>Lubricate the lower end of the strip with mineral oil and place between the hopper door gasket and hopper flange located beneath one of the center hold-down clamps on the side opposite the hinge.</li>
     <li>Clamp the door shut and pull the strip outward free of the gasket. The resistance to pull should be 3-to-5 lb.</li>
     <li>Adjust the particular hold-down clamp until desired pull is achieved.</li>
