--- a/html/Maintenance/Hopper Tanks.html
+++ b/html/Maintenance/Hopper Tanks.html
@@ -4,10 +4,10 @@
 
 <p>The wing center splice fittings may be inspected by removing only the front hopper. To remove the rear hopper it is necessary to remove the windshield. </p>
 
-<p>Details of the upper view of the hopper tanks are shown below. To remove the hopper tanks, the following procedures may be followed: </p>
+<p>Details of the upper view of the hopper tanks are shown below in <xref fileTarget="img_Fig_16.png" xrefType="link">Fig Cross Reference</xref>. To remove the hopper tanks, the following procedures may be followed: </p>
 
 <ol type="1">
-    <li>Remove the hopper gate box and gate box adapter per procedures shown under <b>Hopper Gate Box and Adapter.</b> </li>
+    <li>Remove the hopper gate box and gate box adapter per procedures shown under <xref fileTarget="html/Maintenance/Hopper Gate Box and Adapter.html" xrefType="link", prependLabel="Section"></xref> </li>
     <li>Remove the fuselage side skins on both sides of the hopper tank. </li>
     <li>If the front hopper is to be removed, remove the upper engine cowl skins.</li>
     <li>Remove the hopper lid.</li>
