--- a/html/Maintenance/Spray Pump.html
+++ b/html/Maintenance/Spray Pump.html
@@ -1,6 +1,6 @@
 <p>The spray pump is an Agrinautics p/n 65715 attached to an Agrinautics p/n 60130 strut assembly with AN5-12A bolts. </p>
 
-<p>The standard fan is the Micronair AT-4300 five-blade fan, which is used for low-to-moderate spray volume. For high-volume applications, install the Arrowprop A2-AT4T34 four-blade fan or the Weathaero FA100 fan. Add 48 nozzles to spray booms and change the spray tips on the spray nozzles to larger ones. The figure below shows some typical spray configurations, as well as a chart of available flat fan spray tips. This chart shows the orifice size and flow rate of the various tips at common spray pressures. </p>
+<p>The standard fan is the Micronair AT-4300 five-blade fan, which is used for low-to-moderate spray volume. For high-volume applications, install the Arrowprop A2-AT4T34 four-blade fan or the Weathaero FA100 fan. Add 48 nozzles to spray booms and change the spray tips on the spray nozzles to larger ones. Figure <xref fileTarget="img_Fig_63.png" xrefType="link">Fig Cross Reference</xref> below shows some typical spray configurations, as well as a chart of available flat fan spray tips. Chart <xref fileTarget="img_Fig_63.png" xrefType="link">Fig Cross Reference</xref> shows the orifice size and flow rate of the various tips at common spray pressures. </p>
 
 <figure>
     <img class="imageCentered_5x3" src="img/img_Fig_63.png">
@@ -18,6 +18,8 @@
          <li>Release the latches on the Agrinautics strut assembly and remove the pump and fan.</li>
     </ol>
         <p>or</p>
-        <p>Remove the strut through-bolt on the alternate configuration and remove the pump and fan. </p>
+    <ol type="1">
+       <li>Remove the strut through-bolt on the alternate configuration and remove the pump and fan.</li>
+    </ol>
 
 <p>The pump may be replaced by reversing the order of removal shown above. </p>
