--- a/html/Maintenance/Aileron - Rudder Interconnect System Rigging.html
+++ b/html/Maintenance/Aileron - Rudder Interconnect System Rigging.html
@@ -13,7 +13,7 @@
         in the neutral position</li>
 
     <li>Check the position of the clamp that supports the two idler arms. This clamp should be 10.0 (+/-½) inches from
-        the interface of the longeron and diagonal tube. See figure 1. If necessary, loosen the clamp, adjust it within
+        the interface of the longeron and diagonal tube. See <xref fileTarget="img_AileronRudderInterconnectArms.png" xrefType="link">Fig Cross Reference</xref>. If necessary, loosen the clamp, adjust it within
         this range, and re-tighten hardware.</li>
 
     <li>Check the position of each centering spring. Ensue that the Adel clamp anchoring each spring is located at a
@@ -43,7 +43,7 @@
     <li>Measure the horizontal spread of the idler arms as shown below. This dimension should measure between
         1-3/4 and 1-7/8 inches. In addition, both sides must match within 1/16 inches.
         <figure>
-            <img class="imageCentered_4x3" src="img/img_AileronRudderInterconnectArms.png">
+            <img class="imageCentered_6x4" src="img/img_AileronRudderInterconnectArms.png">
             <figcaption class="centerText">Interconnect Arms</figcaption>
         </figure>
     </li>
