Added table for gaskets

--- a/html/Maintenance/Electrical Fuel Boost Pump.html
+++ b/html/Maintenance/Electrical Fuel Boost Pump.html
@@ -1,1 +1,1 @@
-<p>The wiring schematic for the boost pump is shown in Figure 37.</p>
+<p>The wiring schematic for the boost pump is shown below in .</p>
