--- a/html/Maintenance/Hopper Gate Box and Adapter.html
+++ b/html/Maintenance/Hopper Gate Box and Adapter.html
@@ -9,19 +9,19 @@
             <td class="plainTableHeaderCell centerText">New Gasket</td>
         </tr>
         <tr>
-            <td class="plainTableNormalCell"> (4) </td>
-            <td class="plainTableNormalCell"> 11176-1 </td>
-            <td class="plainTableNormalCell"> 82266-2 </td>
+            <td class="plainTableNormalCell centerText"> (4) </td>
+            <td class="plainTableNormalCell centerText"> 11176-1 </td>
+            <td class="plainTableNormalCell centerText"> 82266-2 </td>
         </tr>
         <tr>
-            <td class="plainTableNormalCell"> (4) </td>
-            <td class="plainTableNormalCell"> 11176-2 </td>
-            <td class="plainTableNormalCell"> 82266-2</td>
+            <td class="plainTableNormalCell centerText"> (4) </td>
+            <td class="plainTableNormalCell centerText"> 11176-2 </td>
+            <td class="plainTableNormalCell centerText"> 82266-2</td>
         </tr>
         <tr>
-            <td class="plainTableNormalCell"> (8) </td>
-            <td class="plainTableNormalCell"> 11175-3 </td>
-            <td class="plainTableNormalCell"> 82264-3 </td>
+            <td class="plainTableNormalCell centerText"> (8) </td>
+            <td class="plainTableNormalCell centerText"> 11175-3 </td>
+            <td class="plainTableNormalCell centerText"> 82264-3 </td>
         </tr>
     </table>
 
