--- a/html/Maintenance/Electrical Fuel Boost Pump.html
+++ b/html/Maintenance/Electrical Fuel Boost Pump.html
@@ -1,1 +1,7 @@
-<p>The wiring schematic for the boost pump is shown in Figure 37.</p>
+<p>The wiring schematic for the boost pump is shown below.</p>
+
+<figure>
+    <img src="img/img_Fig_37.png" class="imageCentered_3x5">
+    <figcaption class="centerText">Boost Pump Wiring Schematic</figcaption>
+</figure>
+
