xref to paint section

--- a/html/Inspection/Insp_FUSELAGE FIXED SKINS.html
+++ b/html/Inspection/Insp_FUSELAGE FIXED SKINS.html
@@ -17,6 +17,6 @@
    <tr>
     <td class="cellInspectionNumber">FFS4</td>
     <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Inspect for cracks or corrosion on all fixed skins. A corroded part should be replaced or else stripped and repainted as described in the Maintenance Section, STRIPPING AND REPAINTING PARTS.</td>
+    <td class="cellInspectionText">Inspect for cracks or corrosion on all fixed skins. A corroded part should be replaced or else stripped and repainted as described in <xref sectionTarget="2.105" xrefType="link", prependLabel="Section"></xref>.</td>
   </tr>
 </table>
