Typo corrections and insert of table and reference

--- a/html/Maintenance/Charging System Troubleshooting.html
+++ b/html/Maintenance/Charging System Troubleshooting.html
@@ -25,9 +25,13 @@
     </li>
     <li>
         GCU Breakout Box- This is not absolutely essential but it is very effective in localizing many problems. 
-        It can be fabricated per Figure 45 or it is available from your dealer at a reasonable price
+        It can be fabricated per <xref fileTarget="img_Fig_45.png" xrefType="link">Fig Cross Reference</xref> below or it is available from your dealer at a reasonable price
     </li>
 </ul>
+<figure>
+    <img class="imageCentered_4x3" src="img/img_Fig_45.png">
+    <figcaption class="centerText"> Breakout Box- Voltage Regulator</figcaption>
+</figure>
 
 <p><b>Troubleshooting Procedures</b></p>
 
