--- a/html/Maintenance/Starting and Charging.html
+++ b/html/Maintenance/Starting and Charging.html
@@ -7,7 +7,7 @@
 
 <p><b>Starting</b></p>
 <p>
-    Actuating the Start Switch energizes the Start Relay, which applies battery voltage to term C of the 
+    Actuating the Start Switch energizes the Start Relay, which applies battery voltage to termal C of the 
     S/G. This operates as a series wound DC motor. Note that at the same time battery voltage is applied to pin N 
     of the GCU which signals it to remove field excitation from the S/G. The purpose of this feature is to prevent 
     the poor start performance that would otherwise result if the Generator Switch were left in the ON position.
