--- a/html/Maintenance/Bottom - Load Plumbing.html
+++ b/html/Maintenance/Bottom - Load Plumbing.html
@@ -5,4 +5,4 @@
     <figcaption class="centerText">Bottom Load Plumbing</figcaption>
 </figure>
 
-<p>A 3-inch hose adapter p/n 79406 is attached to each. The valves are attached to a bracket inside the fuselage with AN4C10A bolts. A p/n 70533-1 bracket supports the forward tube that attaches the support bracket are QS200M22S. </p>
+<p>A 3-inch hose adapter p/n 79406 is attached to each. The valves are attached to a bracket inside the fuselage with AN4C10A bolts. A p/n 70533-1 bracket supports the forward tube that attaches the support bracket using p/n QS200M22S. </p>
