Added stall warning schematic and added as figure

--- a/html/Maintenance/Charging System Troubleshooting.html
+++ b/html/Maintenance/Charging System Troubleshooting.html
@@ -37,7 +37,7 @@
 
 <p><b>Static Tests</b></p>
 <p>
-    Before going into specific Symptoms, which will result in, operational squawks it is productive to 
+    Before going into specific symptoms, which will result in, operational squawks it is productive to 
     point out a static test routine that is quick and easy and will result in localizing some problems without starting 
     the engine. This procedure entails removing the connector from the GCU and checking with the ohmmeter fro 
     designated sockets in test leads will usually have a small resistance, about .1 to .4 ohms, so before starting, 
