--- a/html/Maintenance/Low Fuel Warning System.html
+++ b/html/Maintenance/Low Fuel Warning System.html
@@ -1,5 +1,5 @@
 <p>The low fuel warning system is shown in the schematics below. The exact wiring will vary depending on if an MVP-50T
-    system is installed and what configuration the panel lights but the functionality is the same.</p>
+    system is installed and the configuration of the panel lights but the functionality is the same.</p>
 <figure>
     <img class="imageCentered_6x6" src="img/lowFuelWarningSingleLights.png">
     <figcaption class="centerText">Low Fuel Warning Light Schematic - Single Lights</figcaption>
