--- a/html/Description/Attitude Indicator.html
+++ b/html/Description/Attitude Indicator.html
@@ -1,1 +1,7 @@
-<p style="color:red">CONTENT NOT CREATED</p>
+<p>All AT-802's now come equipped with an attitude indicator to increase the pilots situational awareness.</p>
+<p>Several different types of attitude indicators have been installed to include the RC Allen 2600 and the Garmin G5.</p>
+
+<figure>
+    <img class="imageCentered_3x3" src="img/img_GarminG5.png">
+    <figcaption class="centerText">Garmin G5</figcaption>
+</figure>
