--- a/html/Maintenance/Fuel System Drains.html
+++ b/html/Maintenance/Fuel System Drains.html
@@ -1,9 +1,5 @@
-<p>Refer to the figure below for the location of the fuel tank and header tank drains. These drains are designated for daily activation during the pilot's walk-around inspection as shown in the AIRPLANE FLIGHT MANUAL. </p>
+<p>Refer to the FIGURE NOT FOUND below for the location of the fuel tank and header tank drains. These drains are designated for daily activation during the pilot's walk-around inspection as shown in the AIRPLANE FLIGHT MANUAL. </p>
 
-<figure>
-    <img class="imageCentered_5x3" src="img/img_Fig_41.png">
-    <figcaption class="centerText">Drains</figcaption>
-</figure>
 
 <p>Fuel system drains and other drains on the engine are shown below. </p>
 
