added figure to cockpit lighting and xref

--- a/html/Maintenance/Cockpit Lighting.html
+++ b/html/Maintenance/Cockpit Lighting.html
@@ -1,4 +1,4 @@
-<p>The wiring schematic for the cockpit lighting is shown in Figure 40. The intensity level of the cockpit lights, except for the dome and map lights, is controlled by the solid-state dimming circuit. </p>
+<p>The wiring schematic for the cockpit lighting is shown in <xref fileTarget="img_Fig_40.png" xrefType="link">Fig Cross Reference</xref>. The intensity level of the cockpit lights, except for the dome and map lights, is controlled by the solid-state dimming circuit. </p>
 <figure>
     <img class="imageCentered_6x4" src="img/img_Fig_40.png">
     <figcaption class="centerText">Wiring Schematic- Lighting</figcaption>
