--- a/html/Maintenance/Flap Light.html
+++ b/html/Maintenance/Flap Light.html
@@ -1,1 +1,5 @@
-<p>The wiring schematic for the flap light is shown in Figure 41. The flap light is located in a housing on the upper side of the left-hand wing just forward of the wing flap, near the center of the span of the flap. The light illuminates marks on the leading edge of the flap, providing an indication of the amount of deflection of the flap. The flap light is controlled by the instrument-light switch, but it is not dimmed by the panel-light dimming circuitry. </p>
+<p>The wiring schematic for the flap light is shown in <xref fileTarget="img_Fig_41.png" xrefType="link">Fig Cross Reference</xref> below. The flap light is located in a housing on the upper side of the left-hand wing just forward of the wing flap, near the center of the span of the flap. The light illuminates marks on the leading edge of the flap, providing an indication of the amount of deflection of the flap. The flap light is controlled by the instrument-light switch, but it is not dimmed by the panel-light dimming circuitry. </p>
+<figure>
+    <img class="imageCentered_5x3" src="img/img_Fig_41.png">
+    <figcaption class="centerText"> Wiring Schematic- Flap Lights</figcaption>
+</figure>
